<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DataNose</string>
    <string name="student_id">Enter your student ID</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No internet available</string>
    <string name="invalid_student_id">Invalid student ID</string>
    <string name="enter_student_id">Please enter your student ID</string>
    <string name="timeout">Connection timed out</string>
    <string name="connection_error">Failed to connect to server</string>
    <string name="file_not_fount">No schedule found</string>
    <string name="unknown_host">Unable to resolve host</string>
    <string name="unknown_error"> An unknown error occurred</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_week">Week view</string>
    <string name="action_show_day">Day view</string>
    <string name="sign_out">Sign out</string>
    <string name="to_today">Go to today</string>
    <string name="to_date">Pick date</string>
    <string name="date_not_in_year">Given date is not in the academic year</string>
    <string name="pick_color">Pick calendar color</string>
    <string name="sync_title">Synchronization</string>
    <string name="sync_text">Synchronise your timetable with your agenda</string>
    <string name="noti_title">Notifications</string>
    <string name="noti_text">Receive notifications before class</string>
    <string name="save_text">Changes detected. \nPress Save to save your settings</string>
    <string name="save">Save</string>
    <string name="odata_down_title">Warning</string>
    <string name="odata_down_message">Could not verify your student ID. Your schedule may be incorrect if you entered a wrong ID. Continue anyway?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="refreshing">Refreshing</string>
    <string name="refresh">Refresh now</string>
    <string name="busy_syncing">Please wait until the sync operation is finished</string>
    <string name="busy_refreshing">Please wait while the app is refreshing</string>
    <string name="wait_for_schedule">Waiting for new schedule to download</string>
    <string name="ask_sign_out_title">Warning</string>
    <string name="ask_sign_out_question">If you sign out, the calendar will be erased from your phone. Do you really want to sign out?</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

</resources>
