<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginActivityContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.workmoose.datanose.activity.LoginActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/datanoseTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:textColor="@color/white"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:layout_marginTop="120dp"
        android:layout_below="@id/datanoseTextView"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="@color/white"
        android:visibility="visible"/>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/datanoseTextView"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:id="@+id/studentIdText"
            android:layout_marginTop="25dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="number"
            android:ems="6"
            android:id="@+id/idInput"
            android:layout_below="@id/studentIdText"
            android:gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/blue"
            android:textCursorDrawable="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp" />

        <Button
            android:id="@+id/okButton"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/idInput"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:text="@string/ok"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/blue"
            android:background="@drawable/button_ripple"/>

    </RelativeLayout>

</RelativeLayout>
